k8s/msa-kafka.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kafka-deployment
  namespace: lgcns

spec:
  replicas: 1
  selector:
    matchLabels:
      app: kafka

  template:
    metadata:
      labels:
        app: kafka

    spec:
      # docker container 
      containers:
        - name: kafka-container
          # 혹, 실행중인 컨테이너를 이미지로 만들고 ecr 배포할 경우 ecr repo 주소사용 가능
          image: wurstmeister/kafka
          
          # eks 에서 통신두절 문제로 인하여 단일 Listener만 사용하도록... 
          # ports:
          # - containerPort: 9092
          # env:
          # - name: KAFKA_ZOOKEEPER_CONNECT
          #   value: zookeeper-service:2181

          # - name: KAFKA_ADVERTISED_LISTENERS
          #   value: PLAINTEXT://kafka-service:9092

          # - name: KAFKA_LISTENERS
          #   value: PLAINTEXT://0.0.0.0:9092

          # 기존방식  
          ports:
          - containerPort: 9092
          - containerPort: 9093 
---
# core service setting
# core group : pod, service, ConfigMap, Secret, namespace
apiVersion: v1 
kind: Service
metadata:
  name: kafka-service
  namespace: lgcns
spec:
  type: ClusterIP
  ports:
  - name: outside # 외부접속용 포트
    port: 9092
    targetPort: 9092

  - name: inside # 브로커 내부에서 통신용 사용하는 포트 
    port: 9093
    targetPort: 9093
  selector:
    app: kafka
