k8s/msa_ingress.yml
# aws nlb -> ingress controller(pod) -> ingress -> service -> pod

apiVersion: networking.k8s.io/v1
kind: Ingress 
metadata:
  name: order-ingress
  namespace: lgcns
  annotations:
    # kubernetes.io/ingress.class: nginx 
    # nginx.ingress.kubernetes.io/rewrite-target: /$1

spec:
  ingressClassName: nginx 
  rules:
    # 레코드로 등록한 도메인 이름 
  - host: server.choboreum.shop
    http:
      paths:
        # http://server.choboreum.shop/
      - path: /
        pathType: Prefix
        backend:
          service:
            # routing 위해서 apigateway 를 찾고 해당 서비스에서 실제 라우팅이 발생 
            # http://server.choboreum.shop/user-service
            # http://server.choboreum.shop/product-service
            # http://server.choboreum.shop/order-service 
            name: apigateway-service
            port:
              number: 80
